--- a/index.css
+++ b/index.css
@@ -5,3 +5,7 @@
 body {
   @apply bg-gray-50 text-gray-900 antialiased;
 }
+<link
+  href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+  rel="stylesheet"
+/>
